# yambo-tester

./: ADDING_TESTS.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
docs/codex/: adding-tests-docs-progress.md  bugfix-logging_plan.md  bugfix-logging_progress.md  executables-refactor_plan.md  executables-refactor_progress.md  imported-test-validation-progress.md  p2y-tests_plan.md  p2y-tests_progress.md  runlevel-selection_plan.md  runlevel-selection_progress.md  test-layout.md  tester-cli-reference_plan.md  tester-cli-reference_progress.md  validation-rules.md  yambo-version-support_plan.md  yambo-version-support_progress.md
src/scripts/: test_reference.py  tester_dump.py
src/yambo_tester/: cli.py  config.py  download.py  log.py  reference_compare.py  runner.py  selection.py  versioning.py
src/yambo_tester/data/: config.toml  config.yaml  workflow_keywords.toml
src/yambo_tester/tests/: SFTP  conftest.py  test_reference.py
src/yambo_tester/tests/AlAs/DFT/: scf.files  tests.toml
src/yambo_tester/tests/Al_bulk/DFT/: scf.out  tests.toml
src/yambo_tester/tests/Al_bulk/ELPH/: tests.toml
src/yambo_tester/tests/Al_bulk/GW-OPTICS/: tests.toml  tests.yaml
src/yambo_tester/tests/C6H3Cl3/DFT/: scf.files
src/yambo_tester/tests/He/DFT/: scf.in  scf.out  tests.toml
src/yambo_tester/tests/MoS2/DFT/: scf.in  (+1 more)
tests/: test_config.py  test_logging.py  test_reference_helpers.py  test_runner_p2y.py  test_selection.py  test_tester_dump.py  test_tester_reference.py  test_versioning.py  test_workflow_keywords.py  test_workflow_metadata.py
(+88 files in other folders)
