[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yambo-tester"
version = "0.1.0"
authors = [
  { name = "Nicola Spallanzani", email = "nic.spalla@gmail.com" }
]
maintainers = [
  { name = "Nicola Spallanzani", email = "nic.spalla@gmail.com" }
]
description = "A Python-based testing framework for validating Yambo simulations using the official Yambo test suite."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "pytest",
  "pyyaml",
  "numpy",
  "netCDF4"
]

[project.scripts]
yambo-tester = "yambo_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"yambo_tester" = ["data/config.yaml", "tests/**/*"]
